# okinawago-dictionary-app

./: .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  update-dict.sh  wsgi.py
app/: dictionary.py  main.py  search.py
app/static/: style.css
app/templates/: 404.html  500.html  about.html  base.html  definition-katsuyou_jiten.html  definition-oki2yamato.html  definition-yamato2oki.html  definition.html  index.html  pronunciation.html  search-results.html
extra_wheels/: okinawago_dictionary-0.1.0-py3-none-any.whl  okinawago_dictionary-0.2.0-py3-none-any.whl  okinawago_dictionary-0.3.0-py3-none-any.whl  okinawago_dictionary-0.4.0-py3-none-any.whl
